# rsrch

./: .gitattributes  .gitignore  .gitmodules  README.md  complexity.txt  conda-lock.yml  data  dvc.yaml  environment.yml  infra.yml  pyproject.toml  requirements.txt  setup-env  state.pth  virtual-packages.yml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
conda/: .gitignore  _set_vars.py  conda-lock.yml  environment.yml  remove-env  setup-env  update-lock
datasets/: .gitignore  Makefile
datasets/Font-Awesome-SVG-PNG/: .gitignore  black.dvc  white.dvc
docs/source/: conf.py  index.rst
ext/box2d-py/: .travis.yml  build_and_deploy.sh  dockerfile.3.5  dockerfile.3.6  dockerfile.3.7  get_platform.py  setup.py
ext/box2d-py/Box2D/: Box2D_wrap.cpp
ext/mujoco-py/: pyproject.toml
ext/mujoco-py/mujoco_py/: builder.py  cymj.pyx
launch/: at_400k.py  common.py  export.py  grid.py  grid.slurm  heavy_priming.py  low_ratio_test.py  mono_rv.py  mono_test.py  no_resets.py  opt_ratio_search.py  outliers.py  perf_check.py  pretrain_wm.py  primed_wm_test.py  ratio_test.py  ratio_val_test.py  sanity_check.py  setup_hosts.yml  split_freq.py  split_freq_20k.py  sr_test.py  stable_ratio_test.py  sync_host  sync_host.j2  sync_host.sh.j2  true_sanity_check.py  via_slurm  via_slurm.py  via_ssh.py
rsrch/: __init__.py  dqn.py  unet.py  vae.py
rsrch/_exp/: __init__.py  ckpts.py  git.py  infra.py  logging.py
rsrch/_exp/board/: __init__.py  base.py  tensorboard.py
rsrch/_exp/infra/: __init__.py  config.py  node.py
rsrch/_future/: buffer.py  env.py
rsrch/_future/dreamer/: __main__.py  ac.py  agent.py  config.yml  data.py  dh.py  dist.py  nets.py  presets.yml  rssm.py  runner.py  utils.py  wm.py
rsrch/_future/rl/: __init__.py  buffer.py  data.py  env.py
rsrch/data/: cifar.py  imagenet.py
rsrch/datasets/: __init__.py  font_awesome.py  tiny_imagenet.py  transforms.py
rsrch/ddpg/: __init__.py  __main__.py
rsrch/distributions/: __init__.py  affine.py  bernoulli.py  beta.py  categorical.py  clip_normal.py  constraints.py  dirac.py  discrete.py  distribution.py  ensemble.py  kl.py  mixture.py  mse_proxy.py  multihead_ohst.py  mutlihead_ohst.py  normal.py  one_hot.py  one_hot_categorical.py  one_of.py  particle.py  piecewise.py  squashed_normal.py  tanh_normal.py  transformed.py  transforms.py  trunc_normal.py  tuple.py  uniform.py
rsrch/distributions/v2/: __init__.py  bernoulli.py  categorical.py  dirac.py  distribution.py  multihead_ohst.py  normal.py  one_hot_categorical.py  squashed_normal.py  transformed.py  transforms.py  uniform.py  utils.py
rsrch/distributions/v3/: bernoulli.py  categorical.py  dirac.py  distribution.py  kl.py  mixture.py  multihead_ohst.py  normal.py  one_hot_categorical.py  squashed_normal.py  tensorlike.py  transformed.py  transforms.py  tuple.py  uniform.py  utils.py
rsrch/dqn/: agent.py  base.py  loss.py
rsrch/dqn_v3/: agents.py  env_spec.py  modules.py  q_nets.py  trajectory.py  transition.py  utils.py
rsrch/dreamer/: apx.py  rssm.py  train.py
rsrch/exp/: __init__.py  api.py  board.py  comet.py  dir.py  git.py  log.py  logging.py  pbar.py  profile.py  profiler.py  profiler2.py  tensorboard.py  vcs.py  wandb.py
rsrch/exp/board/: __init__.py  api.py  base.py  null.py  sqlite.py  tb.py  tensorboard.py  wandb.py
rsrch/exp/logger/: api.py  base.py  null.py
rsrch/future/: buffer.py  env.py  env_io.py
rsrch/infra/: __init__.py
rsrch/jax/: __init__.py  amp.py  lax.py  numpy.py  random.py  scipy.py
rsrch/launch/: grid.slurm  setup_hosts.yml  via_slurm.py
rsrch/nn/: __init__.py  builder.py  common.py  conv.py  dh.py  dist_head.py  dist_head_v2.py  ensemble.py  fc.py  fcn.py  masked.py  noisy.py  rewrite.py  utils.py  vq.py
rsrch/ppo/: __init__.py  __main__.py
rsrch/rl/: agent.py  agents.py  api.py  data.py  dqn.py  env_spec.py  spec.py  utils.py  vpg.py  wrappers.py
rsrch/sac/: __init__.py  __main__.py
rsrch/seq/: lstm.py
rsrch/spaces/: __init__.py  derived.py  np.py  torch.py  utils.py
rsrch/trpo/: __init__.py
rsrch/types/: __init__.py  edict.py  namespace.py  rq_tree.py  rw_lock.py  shared.py  spaces.py
rsrch/utils/: __init__.py  _config.py  _sched.py  board.py  cast.py  config.py  copy.py  cron.py  data.py  detach.py  early_stop.py  eval_ctx.py  fixes.py  infra.py  logger.py  parallel.py  path.py  preview.py  replay_buffer.py  repro.py  sched.py  stats.py  vectorize.py  visual.py
rsrch/vpg/: __init__.py  __main__.py
rsrch/vq/: quantizer.py
rsrch/vqvae/: pixelcnn.py  quantizer.py  vqvae.py
scripts/: _fetch_env_vars.py  _parse_freeze.py  _set_vars.py  fix_opencv.py  gpu_setup.py  post_install.py  register-conda-pkgs  set_vars.py  setup-env  setup_env  setup_env.sh  update-lock  update_lock  update_lock.sh
stuff/: _random.ipynb  distq.ipynb  dqn.ipynb  dqn_v2.ipynb  dqn_v3.ipynb  dqn_v4.ipynb  dream.ipynb  pixelcnn++.ipynb  pixelcnn.ipynb  pixelcnn.py  rnn.ipynb  rssm.ipynb  vpg.ipynb  x.npy
tex/thesis/: thesis.tex
thesis/analysis/: Env Selection.ipynb  naive_test.ipynb  perf_curves.ipynb  report_oct18.ipynb  split_freq.ipynb  utils.py
thesis/exp/: baseline.py  presets.yml  sanity_check.py  split_ratios.py  utils.py
thesis/nb/: at_400k.ipynb  naive_test.ipynb  perf_curves.ipynb  split_freq.ipynb  utils.py
thesis/tex/: thesis.tex
wandb/: latest-run
(+518 files in other folders)
