[tool.poetry]
name = "rsrch"
version = "0.1.0"
description = ""
authors = ["vitreusx <jakub_bednarz@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.4"
tensorboard = "^2.12.2"
torch-tb-profiler = "^0.4.1"
colorama = "*"
moviepy = "^1.0.3"
python-slugify = "*"
patchelf = "^0.17.2.1"
mujoco = "^3.1.2"
ptflops = "^0.7"
h5py = "^3.8.0"
sympy = "^1.12"
torch = {version = "2.1.*", platform = "linux", source = "torch"}
torchvision = {version = "0.16.*", platform = "linux", source = "torch"}
gymnasium = {extras = ["accept-rom-license", "atari", "classic-control", "mujoco", "toy-text"], version = "^0.29.1"}
poethepoet = "^0.21.0"
wandb = "^0.15.5"
plotly = "^5.15.0"
dacite = "^1.8.1"
mako = "^1.2.4"
envpool = "^0.8.3"
box2d-py = { path = "ext/box2d-py" }
black = { version = "^23.3.0", extras = ["jupyter"] }
nbconvert = "^7.3.1"
pylint = "^2.17.4"
isort = ">=5"
poetry-plugin-export = "^1.6.0"
ray = "^2.9.0"
lightning = "^2.1.3"
ruamel-yaml = "^0.18.5"
dm-control = {path = "ext/dm_control"}
lz4 = "^4.3.3"
matplotlib = "^3.8.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poe.tasks.fix-opencv]
help = "Replace opencv-python with headless version."
shell = """
VER=$(pip freeze \
  | grep -E "opencv-python==[^ ]*" -o \
  | sed -E 's/opencv-python==(.*)/\\1/')

if [ -n "${VER}" ]; then
  pip uninstall -y opencv-python opencv-python-headless
  pip install -U opencv-python-headless==${VER}
fi
"""

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
disable = "invalid-name,missing-module-docstring"

[tool.pylint.TYPECHECK]
generated-members = "numpy.*, torch.*, np.*"
