[tool.poetry]
name = "rsrch"
version = "0.1.0"
description = ""
authors = ["vitreusx <jakub_bednarz@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.4"
tensorboard = "^2.12.2"
moviepy = "^1.0.3"
patchelf = "^0.17.2.1"
mujoco = "2.2.1"
h5py = "^3.8.0"
sympy = "^1.12"
gymnasium = {version = "^0.29.0", extras = ["accept-rom-license", "atari", "classic-control", "toy-text"]}
wandb = "^0.15.5"
dacite = "^1.8.1"
mako = "^1.2.4"
envpool = "^0.8.4"
box2d-py = { path = "ext/box2d-py" }
ray = "^2.9.0,!=2.32.0"
ruamel-yaml = "^0.18.5"
lz4 = "^4.3.3"
paramiko = "^3.4.0"
omegaconf = "^2.3.0"
pyparsing = "<3"
tabulate = "^0.9.0"
pandas = "^2.2.2"
monkeytype = "^23.3.0"
equinox = "^0.11.4"
optax = "^0.2.2"
jmp = {git = "https://github.com/google-deepmind/jmp"}
opencv-python = "^4.9.0.80"
torch = "^2.3"
torchvision = "^0.18"
lpips = "^0.1.4"
fast-pytorch-kmeans = "^0.2.0.1"
fvcore = "^0.1.5.post20221221"
ale-py = "^0.8.0"
colorama = "^0.4.6"
numpy = "<2"
dm-control = "1.0.5"


[tool.poetry.group.dev.dependencies]
tomli = "^2.0.1"
semver = "^3.0.2"
nbstripout = "^0.7.1"
tbparse = "^0.0.9"
black = { version = "^23.3.0", extras = ["jupyter"] }
nbconvert = "^7.3.1"
pylint = "^2.17.4"
isort = "^5.0"
plotly = "^5.15.0"
matplotlib = "^3.8.3"
tables = "^3.10.1"
kaleido = "0.1.0"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
disable = "invalid-name,missing-module-docstring"

[tool.pylint.TYPECHECK]
generated-members = "numpy.*, torch.*, np.*"
